<resources>
    <string name="app_name">BuddyBeat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlistimage">PlaylistImage</string>
    <string name="play">Play</string>
    <string name="shuffle">Shuffle</string>
    <string name="workout_playlist">Workout Playlist</string>
    <string name="album_6_songs_2024">Album - 6 songs - 2024</string>
    <string name="author">Author</string>
</resources>